# pam-facial-auth

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  configure.sh  run_test.cpp  run_training.cpp  setup.sh
src/: FaceRecWrapper.cpp  FaceRecWrapper.h  FacialAuth.cpp  Utils.h
